--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 	}
 	let client_id = Math.floor(Math.random() * 1000) + 1
 	document.querySelector("#ws-id").textContent = client_id;
-	let ws = new WebSocket(`ws://{{server_urn}}/ws/${client_id}`);
+	let ws = new WebSocket(`{{ ws_protocol }}://{{ server_urn }}/ws/${client_id}`);
 
 	ws.onmessage = function(event) {
 		appendMessage(event.data)
