--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
 <head>
 	<title>Chat</title>
 </head>
-
+<a href="http://127.0.0.1:8000/docs">Documentation</a>
 <body>
-	<div class="flex flex-col items-center">
-		<h1>WebSocket Chat + Notifications of CRUD operations</h1>
+	<div align="center">
+		<h1>WebSocket Chat and Notifications of CRUD operations</h1>
 		<h2>Your ID: <span id="ws-id"></span></h2>
 		<form action="" onsubmit="sendMessage(event)">
-			<input class="bg-green-300" type="text" id="messageText" autocomplete="off" />
+			<input type="text" id="messageText" autocomplete="off" align="center" />
 			<button>Send</button>
 		</form>
 		<ul id='messages'> </ul>
